Fixed navbar component overflowing on ipad layout

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -44,6 +44,7 @@
     border: none;
     outline: none;
     color: white;
+    width: 100%;
 }
 
 // Remove "blue x" from chrome searchbar styling
